# slackbot-poc

./: .env.example  .gitignore  CLAUDE.md  README.md  csv_processor.py  hello.py  main.py  pyproject.toml  run_all_tests.py  slack_bot.py  test_continuous_operation.py  test_csv_processor.py  test_file_upload.py  test_server_integration.py  test_server_lifecycle.py
src/slackbot_poc/: __init__.py  bot.py  csv_processor.py  main.py
tests/: run_all_tests.py  test_csv_processor.py  test_file_upload.py  test_server_integration.py  test_server_lifecycle.py
