[project]
name = "slackbot-poc"
version = "0.1.0"
description = "Slack bot for processing CSV files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack-sdk>=3.20.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
slackbot-poc = "slackbot_poc.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
